--- a/app/src/main/res/layout/activity_safety.xml
+++ b/app/src/main/res/layout/activity_safety.xml
@@ -4,40 +4,39 @@
     android:id="@+id/activity_safety"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.leeph.smartlaps.SafetyActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/basicruleBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginRight="5dp"
-                android:id="@+id/basicruleBtn"
                 android:drawableTop="@drawable/ic_android_black_24dp"
                 android:text="@string/basicRule"
-                />
+                android:theme="@style/Widget.Button.Primary" />
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/chemistryBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:id="@+id/chemistryBtn"
                 android:drawableTop="@drawable/ic_android_black_24dp"
                 android:text="@string/chemicalSubstance"
-                />
+                android:theme="@style/Widget.Button.Primary" />
 
         </LinearLayout>
 
