--- a/app/src/main/res/layout/activity_acid_alkaline_compounds.xml
+++ b/app/src/main/res/layout/activity_acid_alkaline_compounds.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_safety_rule"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.leeph.smartlaps.AcidAlkalineCompoundsActivity">
 
     <ScrollView
@@ -20,29 +20,26 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:elevation="10dp"
-                android:padding="10dp"
-                android:background="#ffffff"
+                style="@style/ElevationLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:text="@string/AcidTitle"
                     android:textColor="@color/colorTitle"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:text="@string/AcidTitle"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@string/AcidContent"
                     android:textColor="@color/colorContent"
-                    android:textSize="10dp"
-                    android:text="@string/AcidContent"/>
+                    android:textSize="10dp" />
 
             </LinearLayout>
 
