--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorTitle">#195D9A</color>
     <color name="colorContent">#2C8FFE</color>
     <color name="colorBackground">#C6E8FF</color>
+    <color name="colorWhite">#FFF</color>
 </resources>
