--- a/app/src/main/res/layout/activity_warn_toluene.xml
+++ b/app/src/main/res/layout/activity_warn_toluene.xml
@@ -4,42 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Drug.Warn.WarnTolueneActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Drug.Warn.WarnTolueneActivity">
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/imgFire"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@drawable/logo"/>
-            <android.support.v7.widget.AppCompatTextView
+
+            <android.support.v7.widget.LinearLayoutCompat
+                style="@style/ElevationLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/strTolueneWarnFire"/>
-            <ImageView
-                android:id="@+id/imgBreath"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@drawable/logo"/>
-            <android.support.v7.widget.AppCompatTextView
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/imgFire"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:src="@drawable/img_fire" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/strTolueneWarnFire" />
+
+            </android.support.v7.widget.LinearLayoutCompat>
+
+            <android.support.v7.widget.LinearLayoutCompat
+                style="@style/ElevationLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/strTolueneWarnBreath"/>
-            <ImageView
-                android:id="@+id/imgCaution"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@drawable/logo"/>
-            <android.support.v7.widget.AppCompatTextView
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/imgBreath"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:src="@drawable/img_breath" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/strTolueneWarnBreath" />
+
+            </android.support.v7.widget.LinearLayoutCompat>
+
+            <android.support.v7.widget.LinearLayoutCompat
+                style="@style/ElevationLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/strTolueneWarnCaution"/>
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/imgCaution"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:src="@drawable/img_caution" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/strTolueneWarnCaution" />
+            </android.support.v7.widget.LinearLayoutCompat>
         </android.support.v7.widget.LinearLayoutCompat>
     </android.support.v4.widget.NestedScrollView>
 
