--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
                     android:padding="10dp"
                     android:textColor="#ffffff"
                     android:textColorHint="#ffffff"
-                    android:id="@+id/idText"
+                    android:id="@+id/txtId"
                     android:drawableStart="@drawable/ic_person_black_24dp"
                     android:drawableLeft="@drawable/ic_person_black_24dp"
                     android:layout_marginRight="10dp"
