--- a/app/src/main/res/layout/activity_experiment.xml
+++ b/app/src/main/res/layout/activity_experiment.xml
@@ -26,6 +26,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:id="@+id/class1"
+                android:theme="@style/Widget.Button.Primary"
                 android:layout_marginRight="5dp"
                 android:text="1학년"/>
 
@@ -35,6 +36,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:id="@+id/class2"
+                android:theme="@style/Widget.Button.Primary"
                 android:text="2학년"/>
 
         </LinearLayout>
@@ -51,6 +53,7 @@
                 android:layout_gravity="center"
                 android:id="@+id/class3"
                 android:layout_marginRight="5dp"
+                android:theme="@style/Widget.Button.Primary"
                 android:text="3학년"/>
 
             <Button
@@ -59,6 +62,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:id="@+id/class4"
+                android:theme="@style/Widget.Button.Primary"
                 android:text="4학년"/>
 
         </LinearLayout>
