--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -5,43 +5,47 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/noticeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="공지사항"
         android:layout_gravity="center"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:id="@+id/noticeText"
+        android:background="@color/colorPrimary"
         android:drawableStart="@drawable/ic_textsms_black_24dp"
         android:drawableLeft="@drawable/ic_textsms_black_24dp"
-        android:background="@color/colorPrimary"
-        android:textStyle="bold"/>
+        android:drawablePadding="6dp"
+        android:padding="10dp"
+        android:text="공지사항"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/nameText"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="이풍호"
             android:layout_gravity="center"
-            android:padding="3dp"
             android:layout_marginLeft="8dp"
+            android:layout_weight="0.4"
+            android:padding="3dp"
+            android:text="이풍호"
             android:textColor="#ffffff"
-            android:textColorHint="#ffffff"
-            android:id="@+id/nameText" />
+            android:textColorHint="#ffffff" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/dateText"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="2019-11-27"
             android:layout_gravity="center"
+            android:layout_weight="0.6"
             android:padding="3dp"
+            android:text="2019-11-27 20:07:46"
             android:textColor="#ffffff"
-            android:textColorHint="#ffffff"
-            android:id="@+id/dateText" />
+            android:textColorHint="#ffffff" />
     </LinearLayout>
 
 
