--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -25,7 +25,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/nameText"
+            android:id="@+id/txtName"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
